[package]
name = "vrt-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
image = "0.24.3"
lru = "0.7.7"
quick-xml = { version = "0.23.0", features = ["serialize"] }
rayon = "1.5.3"
serde = { version = "1.0.137", features = ["derive"] }
smallvec = { version = "1.9.0", features = ["union"] }
thiserror = "1.0.31"
tiff = "0.7.3"
vec_map = "0.8.2"
