[package]
name = "vrt-file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
image = "0.24.6"
lru = "0.10.0"
quick-xml = { version = "0.28.1", features = ["serialize"] }
rayon = "1.7.0"
serde = { version = "1.0.158", features = ["derive"] }
smallvec = { version = "1.10.0", features = ["union"] }
thiserror = "1.0.40"
tiff = "0.9.0"
vec_map = "0.8.2"
